[tool.poetry]
name = "kism-ansible-audit"
description = "KiSM's ansible audit"
authors = ["Kieran Gee <kieran.lost.the.game@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10" # as your user: python3.11 -m pip install --upgrade pip
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pylance = "^0.10.15"
ruff = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
cache-dir = "~/.cache/ruff"
target-version = "py311"
line-length = 120

[tool.ruff.lint]
extend-fixable = ["B"]
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    #### modules
    "DJ",  # django
    "PTH", # KG builtin-open is fine

    #### specific rules
    "T201", # KG print is fine for this scale
    "PLW0603", # KG globals are fine for this scale
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 40
